Fix issue with banner getting too wide on mobile?  Maybe?

--- a/styles.css
+++ b/styles.css
@@ -33,14 +33,7 @@ h1 {
     width: 75%;
     padding: 10px;
 }
-.left-box,
-.right-box {
-    flex: 1 1 0;
-}
-.left-box {
-}
-.right-box {
-}
+.left-box, .right-box { }
 
 .splash-container {
     display: flex;
@@ -62,13 +55,14 @@ h1 {
 }
 
 
+/* large screen - add accent color margin around everything */
 @media (min-width: 800px) {
     .main-container {
         margin: 10px;
     }
 }
 
-
+/* responsive design for smaller screens */
 @media (max-width: 800px) {
     h1 {
         font-size: 1.5em;
@@ -77,7 +71,6 @@ h1 {
         width: 96%;
     }
 }
-
 @media (max-width: 500px) {
     h1 {
         font-size: 1.2em;
